fix spacing between social media icons for small screens

--- a/css/style.css
+++ b/css/style.css
@@ -308,7 +308,7 @@ ol {
 
 @media (max-width: 576px) {
 	.menu-social a {
-		margin-bottom: 30px;
+		margin-bottom: 24px;
 	}
 }
 
